bundle all dependencies and fix esm entry for modern tooling

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Auto scroll dom elements",
   "main": "dist/bundle.js",
   "jsnext:main": "dist/bundle.es.js",
+  "module": "dist/bundle.es.js",
   "directories": {
     "test": "test"
   },
@@ -17,14 +18,12 @@
   ],
   "author": "Quentin Engles <hollowdoor99@gmail.com>",
   "license": "MIT",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "create-point-cb": "^1.0.0",
     "dom-mousemove-dispatcher": "^1.0.1",
     "dom-plane": "^1.0.1",
     "dom-set": "^1.0.1",
-    "type-func": "^1.0.1"
-  },
-  "devDependencies": {
     "dragula": "^3.7.2",
     "minifyify": "^7.3.3",
     "rollup": "^0.41.4",
@@ -32,6 +31,7 @@
     "rollup-plugin-commonjs": "^5.0.5",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1",
+    "type-func": "^1.0.1",
     "uglify-js": "^2.7.4"
   },
   "repository": {
