--- a/package.json
+++ b/package.json
@@ -20,15 +20,14 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.1.0",
     "create-point-cb": "^1.0.0",
     "dom-mousemove-dispatcher": "^1.0.1",
     "dom-plane": "^1.0.1",
     "dom-set": "^1.0.1",
     "dragula": "^3.7.2",
-    "minifyify": "^7.3.3",
-    "rollup": "^0.41.4",
+    "rollup": "^1.32.1",
     "rollup-plugin-buble": "^0.15.0",
-    "rollup-plugin-commonjs": "^5.0.5",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1",
     "type-func": "^1.0.1",
